added queue c and python

--- a/HTML/hello/index.html
+++ b/HTML/hello/index.html
@@ -3,9 +3,12 @@
 <html>
   <head>
     <title>HELLO</title>
+    <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
     <h6>Hello!, World!</h6>
+    <button id = "rotbtn"> Rotate Button </button>
+    <br>
     <a href = "https://github.com/adityavishwakarma69/">lol</a>
   </body>
 </html>
